--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.63-1) unstable; urgency=low
+
+  * Exit if nothing is to do (Bug #28670)
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 01 Nov 2013 15:34:13 +0100
+
 univention-system-setup (7.0.62-1) unstable; urgency=low
 
   * Bug #30816: update UCR variable used for disabling network
