--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.64-1) unstable; urgency=low
+
+  * Bug #33093: adjust language flag buttons to only display the flag
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 01 Nov 2013 16:19:41 +0100
+
 univention-system-setup (7.0.63-1) unstable; urgency=low
 
   * Exit if nothing is to do (Bug #28670)
