* Bug #33093: make sure that a single available module is not opened twice, add CSS class for buttons with only icons
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45818 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-frontend (3.0.145-1) unstable; urgency=low
+
+  * Bug #33093: make sure that a single available module is not opened twice,
+    add CSS class for buttons with only icons
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 01 Nov 2013 16:16:04 +0100
+
 univention-management-console-frontend (3.0.144-1) unstable; urgency=low
 
   * Bug #23214: make autoHide feature of ComboBox dynamic
