* 10_ldap/65univention-admingrp-user-passwordreset-ldapdiff: wait for   s4 connector replication (Bug #33051)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45822 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.161-2) unstable; urgency=low
+
+  * 10_ldap/65univention-admingrp-user-passwordreset-ldapdiff: wait for
+    s4 connector replication (Bug #33051)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 01 Nov 2013 20:43:37 +0100
+
 ucs-test (4.0.161-1) unstable; urgency=low
 
   * Support UCS@school ldbcontrol in s4 connector tests (Bug #32798)
