--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.65-2) unstable; urgency=low
+
+  * Improve network reconfiguration rebustness (Bug #28670)
+
+ -- Philipp Hahn <hahn@univention.de>  Sun, 03 Nov 2013 17:42:24 +0100
+
 univention-system-setup (7.0.64-1) unstable; urgency=low
 
   * Bug #33093: adjust language flag buttons to only display the flag
