* Bug #32751: adjust font size for buttons in grid rows
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45828 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.147-1) unstable; urgency=low
+
+  * Bug #32751: adjust font size for buttons in grid rows
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 04 Nov 2013 10:50:15 +0100
+
 univention-management-console-frontend (3.0.146-1) unstable; urgency=low
 
   * Bug #30811: fixed several usability points
