Bug #28670: USS: Handle primary interface only change
When only the primary interface is changed, the old interface
configuration is not copied into the profile, which caused all
interfaces to be removed.

Build temporary new configuration by copying the current settings and
applying the changes.

Add a test script to easily test several profiles.

Known bug: The PXE configuration seems not be to updated when only the
primary interface changes.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45831 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.65-3) unstable; urgency=low
+
+  * Handle primary interface only change (Bug #28670)
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 04 Nov 2013 13:40:04 +0100
+
 univention-system-setup (7.0.65-2) unstable; urgency=low
 
   * Improve network reconfiguration rebustness (Bug #28670)
