* Bug #30811: added email validation in activiation dialogue, fixed typos
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45833 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.148-1) unstable; urgency=low
+
+  * Bug #30811: added email validation in activiation dialogue, fixed typos
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 04 Nov 2013 14:39:57 +0100
+
 univention-management-console-frontend (3.0.147-1) unstable; urgency=low
 
   * Bug #32751: adjust font size for buttons in grid rows
