--- a/management/univention-management-console-frontend/umc/de.po
+++ b/management/univention-management-console-frontend/umc/de.po
@@ -401,7 +401,7 @@ msgstr "Passwort"
 
 #: umc/app.js:1605
 msgid "Please enter a valid email address!"
-msgstr "Bitte eine gültige E-Mail Adresse angeben!"
+msgstr "Bitte eine gültige E-Mail-Adresse angeben!"
 
 #: umc/tools.js:671
 msgid "Please take a second to provide the following information:"
@@ -513,7 +513,7 @@ msgstr ""
 msgid ""
 "The activation of UCS failed. Please re-try to perform the the activation "
 "again via the settings menu."
-msgstr "Die Aktivierung des UCS-systems schlug fehl. Bitte wiederholen Sie den Aktivierungsvorgang über das Einstellungsmenü."
+msgstr "Die Aktivierung des UCS-Systems schlug fehl. Bitte wiederholen Sie den Aktivierungsvorgang über das Einstellungsmenü."
 
 #: umc/app.js:1560
 msgid "The license has already been activated."
