--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.65-4) unstable; urgency=low
+
+  * ucslint copyright (Bug #28670)
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 04 Nov 2013 14:44:08 +0100
+
 univention-system-setup (7.0.65-3) unstable; urgency=low
 
   * Handle primary interface only change (Bug #28670)
