* Bug #30811: validate email address before jumping to the next page
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45836 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/umc/de.po
+++ b/management/univention-management-console-frontend/umc/de.po
@@ -401,7 +401,7 @@ msgstr "Passwort"
 
 #: umc/app.js:1605
 msgid "Please enter a valid email address!"
-msgstr "Bitte eine gültige E-Mail-Adresse angeben!"
+msgstr "Bitte geben Sie eine gültige E-Mail-Adresse an!"
 
 #: umc/tools.js:671
 msgid "Please take a second to provide the following information:"
