--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.149-1) unstable; urgency=low
+
+  * Bug #30811: validate email address before jumping to the next page
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 04 Nov 2013 16:27:21 +0100
+
 univention-management-console-frontend (3.0.148-1) unstable; urgency=low
 
   * Bug #30811: added email validation in activiation dialogue, fixed typos
