--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.93-1) unstable; urgency=low
+
+  * Bug #32978: fixed multi edit mode
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 04 Nov 2013 16:51:39 +0100
+
 univention-management-console-module-udm (4.0.92-1) unstable; urgency=low
 
   * Bug #32978: save initial form value as soon as each widget is ready,
