* Bug #30811: fixed typos
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45841 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.150-1) unstable; urgency=low
+
+  * Bug #30811: fixed typos
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 04 Nov 2013 16:53:26 +0100
+
 univention-management-console-frontend (3.0.149-1) unstable; urgency=low
 
   * Bug #30811: validate email address before jumping to the next page
