* Bug #32978: disable submit button when creating a new UDM object
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45843 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.94-1) unstable; urgency=low
+
+  * Bug #32978: disable submit button when creating a new UDM object
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 04 Nov 2013 17:31:01 +0100
+
 univention-management-console-module-udm (4.0.93-1) unstable; urgency=low
 
   * Bug #32978: fixed multi edit mode
