--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.151-1) unstable; urgency=low
+
+  * Bug #30811: fixed typos
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 05 Nov 2013 10:41:45 +0100
+
 univention-management-console-frontend (3.0.150-1) unstable; urgency=low
 
   * Bug #30811: fixed typos
