--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,10 @@
+univention-updater (9.0.29-1) unstable; urgency=low
+
+  * Set connector/s4/mapping/group/grouptype to false in postup.sh
+    (Bug #33121)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 05 Nov 2013 12:30:47 +0100
+
 univention-updater (9.0.28-1) unstable; urgency=low
 
   * Pre-upgrade python-univention-directory-manager-uvmm in preup.sh
