* Bug #23214: Fixes for wizards, especially regarding focus
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45853 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.95-1) unstable; urgency=low
+
+  * Bug #23214: Fixes for wizards, especially regarding focus
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 05 Nov 2013 17:57:30 +0100
+
 univention-management-console-module-udm (4.0.94-1) unstable; urgency=low
 
   * Bug #32978: disable submit button when creating a new UDM object
