univention-apache (6.0.16-1) unstable; urgency=low
  * use join script to add link to DC master on non DC master system, not
    package postinst
  * increased join script version in order to have the new link being added on
    updated systems, too
  (Bug #32647)



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45857 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,13 @@
+univention-apache (6.0.16-1) unstable; urgency=low
+
+  * use join script to add link to DC master on non DC master system, not
+    package postinst
+  * increased join script version in order to have the new link being added on
+    updated systems, too
+  (Bug #32647)
+
+ -- Lukas Walter <walter@univention.de>  Wed, 06 Nov 2013 12:36:42 +0100
+
 univention-apache (6.0.15-1) unstable; urgency=low
 
   * Bug #33026: adjusted icon for DC master
