--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.96-1) unstable; urgency=low
+
+  * Bug #33150: fixed problems with saving policies
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 06 Nov 2013 13:18:24 +0100
+
 univention-management-console-module-udm (4.0.95-1) unstable; urgency=low
 
   * Bug #23214: Fixes for wizards, especially regarding focus
