* Bug #33150: fixed typo
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45859 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.97-1) unstable; urgency=low
+
+  * Bug #33150: fixed typo
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 06 Nov 2013 13:28:13 +0100
+
 univention-management-console-module-udm (4.0.96-1) unstable; urgency=low
 
   * Bug #33150: fixed problems with saving policies
