--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-1) unstable; urgency=low
+
+  * Fix service removal (Bug #33138)
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 07 Nov 2013 11:17:14 +0100
+
 univention-lib (3.0.25-6) unstable; urgency=low
 
   * generalize the versioned dependency of shell-univention-lib on
