--- a/base/univention-installer/debian/changelog
+++ b/base/univention-installer/debian/changelog
@@ -1,3 +1,9 @@
+univention-installer (9.0.30-1) unstable; urgency=low
+
+  * Bug #28191: switch back from univention-uefi-secureboot to univention-uefi
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 07 Nov 2013 10:23:10 +0100
+
 univention-installer (9.0.29-1) unstable; urgency=low
 
   * Stopping some major services like listener or samba with their init
