Bug #33179: The minimal size of the EFI System Partition (ESP/EFISYS) is 260 MiB due to a limitation of FAT32 on 4k-sector-drives
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45873 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-installer/debian/changelog
+++ b/base/univention-installer/debian/changelog
@@ -1,3 +1,10 @@
+univention-installer (9.0.30-2) unstable; urgency=low
+
+  * Bug #33179: The minimal size of the EFI System Partition (ESP/EFISYS)
+    is 260 MiB due to a limitation of FAT32 on 4k-sector-drives
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 07 Nov 2013 10:46:52 +0100
+
 univention-installer (9.0.30-1) unstable; urgency=low
 
   * Bug #28191: switch back from univention-uefi-secureboot to univention-uefi
