Bug #33123: moved uniboot.{xpm.gz,png} to /usr/share/univention-grub/ and copy them to /boot/grub/ during installation
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45875 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-grub/debian/changelog
+++ b/base/univention-grub/debian/changelog
@@ -1,3 +1,10 @@
+univention-grub (7.0.4-1) unstable; urgency=low
+
+  * Bug #33123: moved GRUB background image to /usr/share/univention-grub
+    due to dpkg problems with symlinks on FAT32 filesystems.
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 07 Nov 2013 11:29:58 +0100
+
 univention-grub (7.0.3-1) unstable; urgency=low
 
   * Bug #28191: in UEFI mode check for shim and add boot entry for shim
