Bug #28191: explicitly install EFI version of GRUB Bug #28191: removed shim detection / moved some UEFI stuff to univention-uefi
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45876 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-grub/debian/changelog
+++ b/base/univention-grub/debian/changelog
@@ -1,3 +1,10 @@
+univention-grub (7.0.4-2) unstable; urgency=low
+
+  * Bug #28191: explicitly install EFI version of GRUB
+  * Bug #28191: removed shim detection / moved some UEFI stuff to univention-uefi
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 07 Nov 2013 11:31:03 +0100
+
 univention-grub (7.0.4-1) unstable; urgency=low
 
   * Bug #33123: moved GRUB background image to /usr/share/univention-grub
