Bug #33138: lib: Fix double shift in service removal
Fix missing argument handling.

Fixup for r45870

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45891 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-2) unstable; urgency=low
+
+  * Fix double shift in service removal (Bug #33138)
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 07 Nov 2013 16:05:11 +0100
+
 univention-lib (3.0.26-1) unstable; urgency=low
 
   * Fix service removal (Bug #33138)
