Bug #28191: added special chainloading target for UEFI
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45895 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-installer/debian/changelog
+++ b/base/univention-installer/debian/changelog
@@ -1,3 +1,9 @@
+univention-installer (9.0.30-4) unstable; urgency=low
+
+  * Bug #28191: added special chainloading target for UEFI
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 07 Nov 2013 17:03:48 +0100
+
 univention-installer (9.0.30-3) unstable; urgency=low
 
   * Bug #28191: disable chainloading during UEFI boot
