--- a/services/univention-samba/debian/changelog
+++ b/services/univention-samba/debian/changelog
@@ -1,3 +1,10 @@
+univention-samba (8.0.14-1) unstable; urgency=low
+
+  * Don't remove the old var lib samba directory while migration from S3
+    to S4 (Bug #33251)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 12 Nov 2013 11:20:33 +0100
+
 univention-samba (8.0.13-1) unstable; urgency=low
 
   * fixed common spelling mistakes (Bug #32662)
