--- a/services/univention-samba/debian/changelog
+++ b/services/univention-samba/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba (8.0.14-2) unstable; urgency=low
+
+  * Fixed samba4/ignore/mixsetup check in unjoin script (Bug #33251)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 12 Nov 2013 11:44:38 +0100
+
 univention-samba (8.0.14-1) unstable; urgency=low
 
   * Don't remove the old var lib samba directory while migration from S3
