--- a/services/univention-samba/debian/changelog
+++ b/services/univention-samba/debian/changelog
@@ -1,3 +1,10 @@
+univention-samba (8.0.15-1) unstable; urgency=low
+
+  * Don't remove the service entry from localhost in case of the S3 to
+    S4 migration (Bug #33251)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 12 Nov 2013 12:57:06 +0100
+
 univention-samba (8.0.14-2) unstable; urgency=low
 
   * Fixed samba4/ignore/mixsetup check in unjoin script (Bug #33251)
