--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (9.0.31-1) unstable; urgency=low
+
+  * Revert last change(Bug #29605) 
+
+ -- Erik Damrose <damrose@univention.de>  Tue, 12 Nov 2013 13:48:09 +0100
+
 univention-updater (9.0.30-1) unstable; urgency=low
 
   * preup: Check for usermailboxes that would be deleted
