* Copy /var/lib/samba3/private/secrets.tdb to   /var/lib/samba3/secrets.tdb for the S3 to S4 migration   (Bug #33251)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45968 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,11 @@
+univention-samba4 (3.0.36-1) unstable; urgency=low
+
+  * Copy /var/lib/samba3/private/secrets.tdb to
+    /var/lib/samba3/secrets.tdb for the S3 to S4 migration
+    (Bug #33251)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 12 Nov 2013 13:51:20 +0100
+
 univention-samba4 (3.0.35-1) unstable; urgency=low
 
   * Create special groups with univentionSamba4SID attribute
