* univention-ad-takeover:   Run samba-tool dbfix at the end of the process (Bug #33339)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45982 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (8.0.33-1) unstable; urgency=low
+
+  * univention-ad-takeover:
+    Run samba-tool dbfix at the end of the process (Bug #33339)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 12 Nov 2013 17:45:53 +0100
+
 univention-s4-connector (8.0.32-1) unstable; urgency=low
 
   * Added well known sid for IIS_IUSRS (Bug #29486)
