--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba4 (3.0.38-1) unstable; urgency=low
+
+  * Copy more file from private dir in classicupdate mode (Bug #33251)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 13 Nov 2013 11:03:33 +0100
+
 univention-samba4 (3.0.37-1) unstable; urgency=low
 
   * Remove the sambaGroupType rewrite from S3 to S4 classicupdate code
