* Fix samba4-idmap traceback in cases where the sid attribute is missing   (either sambaSid or univentionSamba4SID) (Bug #33234)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46006 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,10 @@
+univention-samba4 (3.0.39-1) unstable; urgency=low
+
+  * Fix samba4-idmap traceback in cases where the sid attribute is missing
+    (either sambaSid or univentionSamba4SID) (Bug #33234)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 13 Nov 2013 18:00:09 +0100
+
 univention-samba4 (3.0.38-1) unstable; urgency=low
 
   * Copy more file from private dir in classicupdate mode (Bug #33251)
