* Add check for update32/ignore_samba_trust (Bug #33342)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46008 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (9.0.31-2) unstable; urgency=low
+
+  * Add check for update32/ignore_samba_trust (Bug #33342)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 13 Nov 2013 19:15:53 +0100
+
 univention-updater (9.0.31-1) unstable; urgency=low
 
   * Revert last change(Bug #29605) 
