* Bug #33157: fix typo when setting permissions for the proxy config
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46021 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-bind/debian/changelog
+++ b/services/univention-bind/debian/changelog
@@ -1,3 +1,9 @@
+univention-bind (8.0.3-1) unstable; urgency=low
+
+  * Bug #33157: fix typo when setting permissions for the proxy config
+
+ -- Florian Best <best@univention.de>  Thu, 14 Nov 2013 11:11:06 +0100
+
 univention-bind (8.0.2-1) unstable; urgency=low
 
   * Also set permissions for the proxy config to 0640 (Bug #33157)
