--- a/base/univention-uefi/debian/changelog
+++ b/base/univention-uefi/debian/changelog
@@ -1,3 +1,9 @@
+univention-uefi (1.0.0-6) unstable; urgency=low
+
+  * Bug #28191: create UEFI bootmanager entries for UEFI and SecureBoot
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 11 Nov 2013 16:23:22 +0100
+
 univention-uefi (1.0.0-5) unstable; urgency=low
 
   * Bug #28191: create UEFI bootmanager entries for UEFI and SecureBoot
