Bug #33123: remove uniboot.png/.xpm.gz in preinst to prevent update failure Moved files within source package
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46033 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-grub/debian/changelog
+++ b/base/univention-grub/debian/changelog
@@ -1,3 +1,9 @@
+univention-grub (7.0.5-1) unstable; urgency=low
+
+  * Bug #33123: remove uniboot.png/.xpm.gz in preinst to prevent update failure
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 14 Nov 2013 10:33:39 +0100
+
 univention-grub (7.0.4-2) unstable; urgency=low
 
   * Bug #28191: explicitly install EFI version of GRUB
