* backup2master: transfer roles before removing the old master   account from samba4 (Bug #33382)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46037 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,10 @@
+univention-ldap (10.0.17-5) unstable; urgency=low
+
+  * backup2master: transfer roles before removing the old master
+    account from samba4 (Bug #33382)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 14 Nov 2013 15:04:21 +0100
+
 univention-ldap (10.0.17-4) unstable; urgency=low
 
   * Only set call mark_active on the DC master, avoiding unnecessary
