Update link for release notes (Bug #33415)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46068 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (9.0.31-4) unstable; urgency=low
+
+  * Update link for release notes (Bug #33415)
+
+ -- Moritz Mühlenhoff <muehlenhoff@univention.de>  Fri, 15 Nov 2013 12:29:10 +0100
+
 univention-updater (9.0.31-3) unstable; urgency=low
 
   * Reroute errormessages to logfile while checking for samba domain
