* Redirect output for ucr set in postup.sh (Bug #33121)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46071 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (9.0.33-1) unstable; urgency=low
+
+  * Redirect output for ucr set in postup.sh (Bug #33121)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 15 Nov 2013 13:44:48 +0100
+
 univention-updater (9.0.31-4) unstable; urgency=low
 
   * Update link for release notes (Bug #33415)
