--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-appcenter (3.0.49-1) unstable; urgency=low
+
+  * Remove UCS@school specific ACLs from ldap/66univention-
+    appcenter_app.acl (Bug #33421)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 15 Nov 2013 14:40:11 +0100
+
 univention-management-console-module-appcenter (3.0.48-5) unstable; urgency=low
 
   * remove ucsschool-errata component from UCR when updating (Bug #30904)
