* Switch to official appcenter for release (Bug #32217)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46078 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (3.0.50-1) unstable; urgency=low
+
+  * Switch to official appcenter for release (Bug #32217) 
+
+ -- Erik Damrose <damrose@univention.de>  Fri, 15 Nov 2013 15:11:15 +0100
+
 univention-management-console-module-appcenter (3.0.49-1) unstable; urgency=low
 
   * Remove UCS@school specific ACLs from ldap/66univention-
