--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.66-1) unstable; urgency=low
+
+  * Bug #33393: fixed error when clicking on "Continue" in appliance mode
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 15 Nov 2013 15:21:02 +0100
+
 univention-system-setup (7.0.65-4) unstable; urgency=low
 
   * ucslint copyright (Bug #28670)
