* Bug #33426: restart UMC server after update
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46081 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (9.0.36-1) unstable; urgency=low
+
+  * Bug #33426: restart UMC server after update
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 15 Nov 2013 15:56:35 +0100
+
 univention-updater (9.0.35-1) unstable; urgency=low
 
   * Switch back to official repository 
