--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (9.0.37-1) unstable; urgency=low
+
+  * Redirect postup.sh output (Bug #33426)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 15 Nov 2013 21:18:47 +0100
+
 univention-updater (9.0.36-1) unstable; urgency=low
 
   * Bug #33426: restart UMC server after update
