* Bug #33426: added a hint to preform a page reload in UMC
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46094 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (9.0.38-1) unstable; urgency=low
+
+  * Bug #33426: added a hint to preform a page reload in UMC
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 18 Nov 2013 09:37:41 +0100
+
 univention-updater (9.0.37-1) unstable; urgency=low
 
   * Redirect postup.sh output (Bug #33426)
