* Bug #33083: adapted package to changes in UCS 3.2
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46099 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/univention-demo-configuration/debian/changelog
+++ b/test/univention-demo-configuration/debian/changelog
@@ -1,3 +1,9 @@
+univention-demo-configuration (2.0.1-1) unstable; urgency=low
+
+  * Bug #33083: adapted package to changes in UCS 3.2
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 18 Nov 2013 10:42:47 +0100
+
 univention-demo-configuration (2.0.0-3) unstable; urgency=low
 
   * new ucs overview (Bug #32611) 
