* Bug #33083: adapted package to changes in UCS 3.2, hide Administrator account in UMC
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46100 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/univention-demo-configuration/debian/changelog
+++ b/test/univention-demo-configuration/debian/changelog
@@ -1,6 +1,7 @@
 univention-demo-configuration (2.0.1-1) unstable; urgency=low
 
-  * Bug #33083: adapted package to changes in UCS 3.2
+  * Bug #33083: adapted package to changes in UCS 3.2, hide Administrator
+    account in UMC
 
  -- Alexander Kläser <klaeser@univention.de>  Mon, 18 Nov 2013 10:42:47 +0100
 
