added mail/postfix/smtpd/debug (Bug #33201)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.1/ucs-3.1-1@46117 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/mail/univention-mail-postfix/debian/changelog
+++ b/mail/univention-mail-postfix/debian/changelog
@@ -1,3 +1,9 @@
+univention-mail-postfix (7.0.3-2) unstable; urgency=low
+
+  * added mail/postfix/smtpd/debug (Bug #33201)
+
+ -- Felix Botner <botner@univention.de>  Tue, 18 Jun 2013 13:29:21 +0200
+
 univention-mail-postfix (7.0.3-1) unstable; urgency=low
 
   * changed permissions of mail.warn and mail.err to 640
