* Bug #33130: prevent to cache entries.json and langauges.json in IE < 10
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46128 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,9 @@
+univention-apache (6.0.16-2) unstable; urgency=low
+
+  * Bug #33130: prevent to cache entries.json and langauges.json in IE < 10
+
+ -- Florian Best <best@univention.de>  Tue, 19 Nov 2013 16:00:48 +0100
+
 univention-apache (6.0.16-1) unstable; urgency=low
 
   * use join script to add link to DC master on non DC master system, not
